methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:5: error: type mismatch;
 found   : Unit
 required: Boolean
   return vuBiscuit=true
                   ^MethodsReturning:11: error: type mismatch;
 found   : Unit
 required: Boolean
  avance(7)
        ^