methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit:Boolean =false
  avance(7)
  if (estSurBiscuit()){ 
   return vuBiscuit=true
  }else
  recule(7)
  droite()
  avance()
  gauche()
  avance(7)
  
}